force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/Generate_Forecast_Input_Batch_Manager__mdt.object-meta.xml
<CustomObject>
    <description>User for setup GenerateForecastInputBatch query and criteria</description>
    <label>Generate Forecast Input Batch Manager</label>
    <pluralLabel>Generate Forecast Input Batch Managers</pluralLabel>
</CustomObject>