force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>