force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/fields/Main_Query__c.field-meta.xml
<CustomField>
    <fullName>Main_Query__c</fullName>
    <description>Used for define query string SELECT clause and WHERE clause ***Required Name field to be index***</description>
    <inlineHelpText>&quot; SELECT xxxxxxx WHERE xxxx = &apos;value&apos; &quot;</inlineHelpText>
    <label>Main Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>