force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/fields/Order_By_Query__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Query__c</fullName>
    <inlineHelpText>&quot;ORDER BY xxxxxxxx&quot;</inlineHelpText>
    <label>Order By Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>