force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/fields/Requied_Sync__c.field-meta.xml
<CustomField>
    <fullName>Requied_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Requied Sync</label>
    <type>Checkbox</type>
</CustomField>