force-app/main/default/objects/Generate_Forecast_Input_Batch_Manager__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Main_Query__c</columns>
    <columns>Additional_Criteria__c</columns>
    <columns>Order_By_Query__c</columns>
    <columns>Product_Domain__c</columns>
    <columns>Product_Remark__c</columns>
    <columns>Batch_size__c</columns>
    <columns>Customer_Segment__c</columns>
    <columns>Priority__c</columns>
    <columns>Requied_Sync__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>